--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name" : "find",
-    "appid" : "wx2b16cd9031eb2987",
+    "name" : "正经吧",
+    "appid" : "__UNI__008CEF4",
     "description" : "唐山旅发大会",
     "versionName" : "1.0.0",
     "versionCode" : 100,
@@ -76,7 +76,7 @@
                 "payment" : {
                     "weixin" : {
                         "__platform__" : [ "ios", "android" ],
-                        "appid" : "wx2b16cd9031eb2987",
+                        "appid" : "wx707824a7ac43011d",
                         "UniversalLinks" : ""
                     },
                     "alipay" : {
@@ -89,7 +89,7 @@
                 "share" : {},
                 "oauth" : {
                     "weixin" : {
-                        "appid" : "wx2b16cd9031eb2987",
+                        "appid" : "wx2493e8432811ef47",
                         "appsecret" : "818a0c977c057ef80e2767d1aa8df43a",
                         "UniversalLinks" : ""
                     },
@@ -174,7 +174,7 @@
         "setting" : {
             "urlCheck" : true,
             "minified" : false,
-            "es6" : false,
+            "es6" : true,
             "postcss" : true
         },
         "usingComponents" : true,
